fix: carousel on mobile

--- a/portfolio/src/app/components/carousel/carousel.module.css
+++ b/portfolio/src/app/components/carousel/carousel.module.css
@@ -1,7 +1,17 @@
 .holder {
     overflow: hidden;
+
+    padding: 0;
+    margin: 0;
 }
 
 .flex {
     display: flex;
+}
+
+.flex > * {
+    flex-grow: 0;
+    flex-shrink: 0;
+    flex-basis: 100%;
+    margin-bottom: 0;
 }
