--- a/portfolio/src/app/components/project/carousel/carousel.module.css
+++ b/portfolio/src/app/components/project/carousel/carousel.module.css
@@ -1,18 +1,24 @@
 .carousel {
-    height: 500px;
+    height: auto;
     margin-bottom: 2rem;
-
     padding: 0;
     overflow: hidden;
-
     border-radius: 0.8rem;
+
+    box-sizing: border-box;
+    background-color: red;
+
+    position: relative;
+}
+
+.carousel > * {
+    padding: 0;
 }
 
 .carouselImage {
     width: 100%;
-    height: 500px;
+    height: 100%;
     object-fit: cover;
-    overflow: hidden;
 }
 
 .carouselSlide {
